# internship_severstal26

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2bdbc22717de_is_active.py  5a8f818f40c0_init_subjects.py
src/: config.py  logger.py  main.py
src/api/routers/v1/: __init__.py  subjects.py
src/db/: base.py  connection.py  subjectsManager.py
src/middlewares/: loggingMiddleware.py
src/models/: __init__.py  base.py  subject.py
src/schemes/: __init__.py  subjects.py
src/service/: redisManager.py  redis_conn.py
src/utils/: check_db.py  filters_db.py  key_redis.py
test/: conftest.py  test_subjects.py
